--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
     "@tailwindcss/postcss": "^4.0.12",
