--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+    		<groupId>io.github.java-diff-utils</groupId>
+    		<artifactId>java-diff-utils</artifactId>
+    		<version>4.15</version>
+		</dependency>
 	</dependencies>
 
 	<build>
