Adding executable permission to maven wrapper

--- a/.github/workflows/merged-pull-request-pipeline.yml
+++ b/.github/workflows/merged-pull-request-pipeline.yml
@@ -19,7 +19,9 @@ jobs:
           cache: 'maven'
           distribution: 'corretto'
 
-
+      - name: Add executable permissions
+        run: chmod a+x mvnw
+        
       - name: Maven install dependencies
         run: ./mvnw clean install package -Dmaven.test.skip=true
 
