--- a/.github/workflows/merged-pull-request-pipeline.yml
+++ b/.github/workflows/merged-pull-request-pipeline.yml
@@ -47,21 +47,37 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker Build
-        uses: docker/build-push-action@v6
-        with:
-          push: false
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
+      # - name: Docker Build
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     push: false
+      #     tags: |
+      #       ${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
 
-      - name: Docker Push
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
+      # - name: Docker Push
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     push: true
+      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
+
+
+      - name: Add executable permissions
+        run: chmod a+x mvnw
+        
+      - name: Build and push docker image
+        run: |
+          mvn spring-boot:build-image \
+          -Ddocker.publishRegistry.username=${{ secrets.DOCKERHUB_USERNAME }} \
+          -Ddocker.publishRegistry.password=${{ secrets.DOCKERHUB_TOKEN }}\
+          -Ddocker.publishRegistry.url=hub.docker.com \
+          -Dspring-boot.build-image.publish=true \
+          -Dspring-boot.build-image.imageName=${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
+        
+
+          
