--- a/.github/workflows/merged-pull-request-pipeline.yml
+++ b/.github/workflows/merged-pull-request-pipeline.yml
@@ -66,10 +66,18 @@ jobs:
       #     push: true
       #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
 
+      - name: Setup java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          cache: 'maven'
+          distribution: 'corretto'
 
       - name: Add executable permissions
         run: chmod a+x mvnw
-        
+
+      
+          
       - name: Build and push docker image
         run: |
           mvn spring-boot:build-image \
