--- a/.github/workflows/merged-pull-request-pipeline.yml
+++ b/.github/workflows/merged-pull-request-pipeline.yml
@@ -37,13 +37,6 @@ jobs:
           name: app-protector
           path: ./target/*.jar
 
-  docker:
-    #This was the feature to run only if accepted merge was triggered - unsuccessful yet.
-    #if: ${{ github.event.pull_request.merged }}
-    runs-on: ubuntu-latest
-    needs: [build]
-
-    steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -53,39 +46,39 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # - name: Docker Build
-      #   uses: docker/build-push-action@v6
-      #   with:
-      #     push: false
-      #     tags: |
-      #       ${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
-
-      # - name: Docker Push
-      #   uses: docker/build-push-action@v6
-      #   with:
-      #     push: true
-      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
-
-      - name: Setup java
-        uses: actions/setup-java@v4
+      - name: Docker Build
+        uses: docker/build-push-action@v6
         with:
-          java-version: '21'
-          cache: 'maven'
-          distribution: 'corretto'
+          push: false
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
 
-      - name: Add executable permissions
-        run: chmod a+x mvnw
+      - name: Docker Push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
+
+      # - name: Setup java
+      #   uses: actions/setup-java@v4
+      #   with:
+      #     java-version: '21'
+      #     cache: 'maven'
+      #     distribution: 'corretto'
+
+      # - name: Add executable permissions
+      #   run: chmod a+x mvnw
 
       
           
-      - name: Build and push docker image
-        run: |
-          mvn spring-boot:build-image \
-          -Ddocker.publishRegistry.username=${{ secrets.DOCKERHUB_USERNAME }} \
-          -Ddocker.publishRegistry.password=${{ secrets.DOCKERHUB_TOKEN }}\
-          -Ddocker.publishRegistry.url=hub.docker.com \
-          -Dspring-boot.build-image.publish=true \
-          -Dspring-boot.build-image.imageName${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
+      # - name: Build and push docker image
+      #   run: |
+      #     mvn spring-boot:build-image \
+      #     -Ddocker.publishRegistry.username=${{ secrets.DOCKERHUB_USERNAME }} \
+      #     -Ddocker.publishRegistry.password=${{ secrets.DOCKERHUB_TOKEN }}\
+      #     -Ddocker.publishRegistry.url=hub.docker.com \
+      #     -Dspring-boot.build-image.publish=true \
+      #     -Dspring-boot.build-image.imageName${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
         
 
           
