--- a/.github/workflows/merged-pull-request-pipeline.yml
+++ b/.github/workflows/merged-pull-request-pipeline.yml
@@ -26,11 +26,11 @@ jobs:
       - name: Maven install dependencies
         run: ./mvnw clean install package
 
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-protector
-          path: ./target/*.jar
+      # - name: Upload JAR artifact
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: app-protector
+      #     path: ./target/*.jar
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
