--- a/.github/workflows/merged-pull-request-pipeline.yml
+++ b/.github/workflows/merged-pull-request-pipeline.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Docker Build and Push
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
