--- a/.github/workflows/merged-pull-request-pipeline.yml
+++ b/.github/workflows/merged-pull-request-pipeline.yml
@@ -26,11 +26,11 @@ jobs:
       - name: Maven install dependencies
         run: ./mvnw clean install package
 
-      # - name: Upload JAR artifact
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: app-protector
-      #     path: ./target/*.jar
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-protector
+          path: ./target/*.jar
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -45,3 +45,20 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/apiprotector:${{ github.sha }}
+
+      - name: Update CICD-VPS
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --global user.name 'Dawid Jabłoński'
+          git config --global user.email 'xederro@gmail.com'
+          git config --unset-all http.https://github.com/.extraheader
+          rm -rf .git
+          mkdir cicd
+          cd cicd
+          git clone "https://x-access-token:${{ secrets.TOKEN_VPS_REPO }}@github.com/xederro/CICD-VPS.git" --depth=1
+          cd CICD-VPS
+          sed -i 's|piachsecki/apiprotector:[0-9a-f]\{40\}|piachsecki/apiprotector:${{ github.sha }}|g' docker-stack.yml
+          git add .
+          git commit -m"API Protector Update: $(date)"
+          git push
