--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
     "@tailwindcss/postcss": "^4.0.12",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.17",
