--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
     "@tailwindcss/postcss": "^4.0.12",
