--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,13 +6,14 @@ on:
       - master
 
 jobs:
-  build:
+  check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Running OpenAPI Spec diff action
+        continue-on-error: true
         uses: oasdiff/oasdiff-action/breaking@main
         with:
           # In original actions we would use this base:
@@ -20,11 +21,36 @@ jobs:
 
           # And we would use this revision (new api spec) from the current changes coming up from pull request
           # https://raw.githubusercontent.com/APIprotector/demo/refs/heads${{ github.ref_name }}/src/main/resources/openapi.yaml
-          base: https://raw.githubusercontent.com/APIprotector/ApiSpecRetriever/refs/heads/master/API%20Specki/Kubernetes/swagger_2025-03-25.json
+          base: https://raw.githubusercontent.com/APIprotector/ApiSpecRetriever/refs/heads/master/API%20Specki/Kubernetes/swagger_2024-11-06.json
           revision: https://raw.githubusercontent.com/APIprotector/ApiSpecRetriever/refs/heads/master/API%20Specki/Kubernetes/swagger_2025-03-25.json
           fail-on: ERR
           include-path-params: false
           composed: false
+
+  manual-approval:
+    runs-on: ubuntu-latest
+    needs: check
+    if: ${{ failure() }} 
+    
+    permissions:
+      issues: write
+
+    steps:
+      - name: Await Manual Approval
+        uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ github.TOKEN }}
+          approvers: Piachsecki
+          minimum-approvals: 1
+          issue-title: "Manual Approval Required for API spec acceptation"
+          issue-body: "Please approve or deny the breaking changes of API specs"
+          
+  build:
+    needs: [manual-approval]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Setup java
         uses: actions/setup-java@v4
