--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
     		<artifactId>java-diff-utils</artifactId>
     		<version>4.15</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.openapitools.openapidiff</groupId>
+			<artifactId>openapi-diff-core</artifactId>
+			<version>2.1.0-beta.12</version>
+		</dependency>
 	</dependencies>
 
 	<build>
