--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-radio-group": "^1.3.4",
+    "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
+    "@stoplight/spectral-core": "^1.20.0",
     "@tailwindcss/postcss": "^4.0.12",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
