implements core usage from outer jar file

--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,25 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.APIprotector</groupId>
-	<artifactId>apiprotector</artifactId>
+	<artifactId>apiprotector-web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>apiprotector</name>
 	<description>Demo project for APIprotector</description>
+
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>https://repo1.maven.org/maven2</url>
+		</repository>
+		<repository>
+			<id>github</id>
+			<url>https://maven.pkg.github.com/apiprotector/API-Protector</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<url/>
 	<licenses>
 		<license/>
@@ -42,15 +57,9 @@
 		</dependency>
 
 		<dependency>
-    		<groupId>io.github.java-diff-utils</groupId>
-    		<artifactId>java-diff-utils</artifactId>
-    		<version>4.15</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.openapitools.openapidiff</groupId>
-			<artifactId>openapi-diff-core</artifactId>
-			<version>2.1.0-beta.12</version>
+			<groupId>com.apiprotector</groupId>
+			<artifactId>api-protector-core</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
