change api-protector-core version usage from 1.0.0 to 1.0.2-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>com.apiprotector</groupId>
 			<artifactId>api-protector-core</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
