--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
     "@stoplight/spectral-core": "^1.20.0",
+    "@stoplight/spectral-functions": "^1.10.1",
+    "@stoplight/spectral-parsers": "^1.0.5",
+    "@stoplight/spectral-ruleset-bundler": "^1.6.3",
     "@tailwindcss/postcss": "^4.0.12",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
