--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-fetch": "^4.1.0",
     "isbot": "^5.1.17",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.479.0",
