--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -19,17 +19,48 @@ jobs:
           cache: 'maven'
           distribution: 'corretto'
 
+      - name: Create settings.xml
+        run: |
+          SETTINGS_XML_PATH="${GITHUB_WORKSPACE}/settings.xml"
+          cat << EOF > ${SETTINGS_XML_PATH}
+          <settings>
+            <activeProfiles>
+              <activeProfile>github</activeProfile>
+            </activeProfiles>
+            <profiles>
+              <profile>
+                <id>github</id>
+                <repositories>
+                  <repository>
+                    <id>github</id>
+                    <url>https://maven.pkg.github.com/apiprotector/API-Protector</url>
+                    <snapshots>
+                      <enabled>true</enabled>
+                    </snapshots>
+                  </repository>
+                </repositories>
+              </profile>
+            </profiles>
+            <servers>
+              <server>
+                <id>github</id>
+                <username>${{ secrets.GH_PACKAGES_USER }}</username>
+                <password>${{ secrets.GH_PACKAGES_PAT }}</password>
+              </server>
+            </servers>
+          </settings>
+          EOF
+        env:
+          GH_PACKAGES_USER: ${{ secrets.GH_PACKAGES_USER }}
+          GH_PACKAGES_PAT: ${{ secrets.GH_PACKAGES_PAT }}
+
       - name: Add executable permissions
         run: chmod a+x mvnw
-        
-      - name: Maven install dependencies
-        run: ./mvnw clean install package
 
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-protector
-          path: ./target/*.jar
+      - name: Maven install dependencies
+        run: |
+          SETTINGS_XML_PATH="${GITHUB_WORKSPACE}/settings.xml"
+          ./mvnw clean install package -Dmaven.test.skip=true --settings ${SETTINGS_XML_PATH}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
