Fix wrapping problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=apiprotector
+server.tomcat.max-http-form-post-size=40MB
+spring.servlet.multipart.max-file-size=40MB
+spring.servlet.multipart.max-request-size=40MB
+
 
 gemini.api.key=${GEMINI_API_KEY}
 gemini.api.baseurl=https://generativelanguage.googleapis.com/v1beta/models/
